--- a/introscreen/index.html
+++ b/introscreen/index.html
@@ -9,16 +9,17 @@
 </head>
 
 <body>
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    
     <header>
         <span id="title">Title of Game</span>
     </header>
 
     <div id="intro-box">
         <p><b>Instructions:</b></p>
-        <hr>
-        <p>SMILE = jump</p>
-        <p>FROWN = duck</p>
-        <p>NEUTRAL = run</p>
+        <p><b>SMILE</b> to jump</p>
+        <p><b>FROWN</b> to duck</p>
+        <p><b>NEUTRAL</b> to run</p>
 
         <div id="button" onclick="startGame()">
             <span id="play">PLAY</span>
