added python server that returns how angerry nic cage is

--- a/index.html
+++ b/index.html
@@ -2,27 +2,23 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Zachary Denham</title>
-  <meta name="author" content="Zachary Denham">
-  <meta name="description" content="Zachary Denham. Student. Developer. Builder.">
-  <meta name="keyword" content="Zachary Denham, Zac Denham, Zach Denham, USC Student">
-  <meta property="og:image" content="assets/profilePic.png">
-  <meta property="og:title" content="Zachary Denham">
-  <meta property="og:description" content="student. developer. friendly guy.">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <link rel="stylesheet" type="text/css" href="main.css?v-1.8">
-
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-  <script src="https://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
-  <script src="velocity.js"></script>
-  <script src="main.js" ></script>
-
-
+  <title>EMOTION GAME/title>
 </head>
 <body>
 
-<h1> hello world </h1>
+<h1> send help </h1>
+
+
+<script>
+
+
+
+
+</script>
+
+
 </body>
 </html>
+
+
 
