--- a/VideoTest/index.html
+++ b/VideoTest/index.html
@@ -8,9 +8,9 @@
 
   <video width="70%" autoplay></video>
   <canvas id="canvas" width="200" height="200"></canvas>
-  <span id="capture-button">Capture</span>
+  <span id="capture-button" clickon="paintCanvas()">Capture</span>
   <span id="use-this">Use this</span>
-
+<script src="jquery-2.1.4.js"></script>
 <script src="script.js"></script>
 </body>
 </html>
