linked intro with game on play button click

--- a/gameinjavascripthtml/index.html
+++ b/gameinjavascripthtml/index.html
@@ -1,29 +1,30 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<style>
-canvas {
-    border: 1px solid #d3d3d3;
-    background-color: #f1f1f1;
-}
-</style>
+    <link type="text/css" rel="stylesheet" href="style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <style>
+        canvas {
+            border: 1px solid #d3d3d3;
+            background-color: #f1f1f1;
+        }
+    </style>
 </head>
+
 <body onload="startGame()">
 
-    
-<!--<button onmousedown="moveup()" onmouseup="stopMove()">UP</button>-->
-<button onclick = "jump()">JUMP</button>
-<!--<button onmousedown="movedown()" onmouseup="stopMove()">DOWN</button>-->
-<button onclick = "duck()">DUCK</button>
-<button onclick = "myGameArea.stop()">STOP</button>
-<button onclick = "refreshGame()">REFERESH</button>
+
+    <!--<button onmousedown="moveup()" onmouseup="stopMove()">UP</button>-->
+    <button onclick="jump()">JUMP</button>
+    <!--<button onmousedown="movedown()" onmouseup="stopMove()">DOWN</button>-->
+    <button onclick="duck()">DUCK</button>
+    <button onclick="myGameArea.stop()">STOP</button>
+    <button onclick="refreshGame()">REFRESH</button>
 
 
-<p></p>
-<script src="script.js"></script>
+    <p></p>
+    <script src="script.js"></script>
 </body>
+
 </html>
-
-
-
