--- a/introscreen/index.html
+++ b/introscreen/index.html
@@ -21,15 +21,16 @@
         <p><b>FROWN</b> to duck</p>
         <p><b>NEUTRAL</b> to run</p>
 
-        <script type="text/javascript" src="/AthenaHacks2017/gameinjavascripthtml/index.html">
+        <script>
             function start() {
-                startGame();
+                window.location.href = "/AthenaHacks2017/gameinjavascripthtml/index.html";
             }
         </script>
 
         <div id="button" onclick="start()">
             <span id="play">PLAY</span>
         </div>
+    </div>
 </body>
 
 </html>
