--- a/maingame/index.html
+++ b/maingame/index.html
@@ -12,7 +12,7 @@
     <!--    <script src="../VideoTest/jquery-2.1.4.js"></script>-->
     <script src="../VideoTest/script.js"></script>
 
-    <link rel="stylesheet" href="style.css">
+    <link type="text/css" rel="stylesheet" href="style.css" />
 </head>
 
 <body onload="startGame()">
