really adding changes now??? i hope

--- a/introscreen/index.html
+++ b/introscreen/index.html
@@ -23,8 +23,9 @@
 
         <script>
             function start() {
-                window.location.href = "/AthenaHacks2017/gameinjavascripthtml/index.html";
+                window.location.href = "../maingame/index.html";
             }
+
         </script>
 
         <div id="button" onclick="start()">
