--- a/maingame/index.html
+++ b/maingame/index.html
@@ -21,7 +21,7 @@
         <div class="row fill">
             <div id="sidebar" class="col-sm-4 text-center">Sidebar
                 <video width="70%" autoplay></video>
-                <canvas id="canvas" width="200" height="200"></canvas>
+                <canvas id="canvas1" width="200" height="200"></canvas>
                 <span id="capture-button" clickon="paintCanvas()">Capture</span>
                 <span id="use-this">Use this</span>
 
