--- a/mainproduct/index.html
+++ b/mainproduct/index.html
@@ -12,7 +12,7 @@
 
     <script src="gamescript.js"></script>
     <!--    <script src="../VideoTest/jquery-2.1.4.js"></script>-->
-<!--    <script src="camerascript.js"></script>-->
+    <!--    <script src="camerascript.js"></script>-->
 
     <link rel="stylesheet" href="style.css">
 </head>
@@ -21,7 +21,8 @@
 
     <div class="container-fluid">
         <div class="row fill">
-            <div id="sidebar" class="col-sm-4 text-center">Sidebar
+            <div id="sidebar" class="col-sm-4 text-center">
+
                 <video width="70%" autoplay></video>
                 <canvas id="canvas1" width="200" height="200"></canvas>
             </div>
