buttons are prettier

--- a/mainproduct/index.html
+++ b/mainproduct/index.html
@@ -28,8 +28,9 @@
             </div>
 
             <div id="game" class="col-sm-8 text-center">
-                <button onclick="myGameArea.stop()">STOP</button>
-                <button onclick="refreshGame()">REFERESH</button></div>
+                <p id="stopbutton" onclick="myGameArea.stop()">STOP</p>
+                <p id="refresh" onclick="refreshGame()">REFRESH</p>
+            </div>
         </div>
     </div>
 
