--- a/maingame/index.html
+++ b/maingame/index.html
@@ -31,7 +31,7 @@
                 <!--<button onmousedown="movedown()" onmouseup="stopMove()">DOWN</button>-->
                 <button onclick="duck()">DUCK</button>
                 <button onclick="myGameArea.stop()">STOP</button>
-                <button onclick="refreshGame()">REFERESH</button></div>
+                <button onclick="refreshGame()">REFRESH</button></div>
         </div>
     </div>
 
