--- a/introscreen/index.html
+++ b/introscreen/index.html
@@ -12,7 +12,8 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
     <header>
-        <span id="title">Title of Game</span>
+        <span id="title">smile🏃run</span><br>
+        <span id="subtitle">made at AthenaHacks 2017!</span>
     </header>
 
     <div id="intro-box">
