current final ver

--- a/introscreen/index.html
+++ b/introscreen/index.html
@@ -24,9 +24,8 @@
 
         <script>
             function start() {
-                window.location.href = "../maingame/index.html";
+                window.location.href = "../mainproduct/index.html";
             }
-
         </script>
 
         <div id="button" onclick="start()">
