--- a/introscreen/index.html
+++ b/introscreen/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
     <header>
-        <span id="title">smile🏃run</span><br>
+        <span id="title">smile<img src="/AthenaHacks2017/icon.png" style="25px:25px;25px:25px;">run</span><br>
         <span id="subtitle">made at AthenaHacks 2017!</span>
     </header>
 
