changed index file names

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <script>
             function start() {
-                window.location.href = "mainproduct/index.html";
+                window.location.href = "game.html";
             }
         </script>
 
